--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,6 +6,6 @@ ENV GOPATH /go
 RUN apk-install go
 RUN apk-install ca-certificates
 COPY tmp/src /go/src
-WORKDIR /go/src/github.com/gliderlabs/logspout
+WORKDIR /go/src/github.com/amaysim-au/logspout
 CMD go build -ldflags "-X main.Version dev" -o /bin/logspout \
 	&& exec /bin/logspout
